--- a/manifest.json
+++ b/manifest.json
@@ -14,11 +14,11 @@
       "scripts":["event.js"],
       "persistent":false
     },
-  "content_scripts":[{
-      "matches":["https://www.youtube.com"],
-      "css":"style.css",
-      "js":["jquery.js"]
-    }],
+  // "content_scripts":[{
+  //     "matches":["https://www.youtube.com"],
+  //     "css":"style.css",
+  //     "js":["jquery.js"]
+  //   }],
   "permissions": [
     "<all_urls>"
     // "activeTab"
