--- a/manifest.json
+++ b/manifest.json
@@ -14,11 +14,12 @@
       "scripts":["event.js"],
       "persistent":false
     },
+"content_security_policy": "script-src 'self' https://cdn.firebase.com https://*.firebaseio.com; object-src 'self'",
+
   // "content_scripts":[{
   //     "matches":["*"],
   //     "css":["style.css"],
-  //     "js":["test.js"],
-  //     // "run_at":"document_end"
+  //     "js":["test.js"]
   //   }],
   "permissions": [
     "<all_urls>"
