--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^0.13.1",
     "react-hot-loader": "^1.2.9",
     "react-proxy-loader": "^0.3.1",
+    "reactfire": "^0.5.0",
     "sass-loader": "^2.0.1",
     "stats-webpack-plugin": "^0.1.2",
     "style-loader": "^0.12.0",
