--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
   "manifest_version": 2,
 
-  "name": "Getting started example",
+  "name": "Real Time Comments",
   "description": "This extension shows a Google Image search result for the current page",
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "off.png",
     // "default_popup": "popup.html",
-    "default_title":"my example"
+    "default_title":"Real Time Comments"
   },
   "background":{
       "scripts":["event.js"],
