--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
       "persistent":false
     },
 "content_security_policy": "script-src 'self' https://cdn.firebase.com https://*.firebaseio.com; object-src 'self'",
-  "web_accessible_resources": ["assets/*"],
+  "web_accessible_resources": ["assets/emojis/*"],
   // "content_scripts":[{
   //     "matches":["*"],
   //     "css":["style.css"],
@@ -24,10 +24,6 @@
   "permissions": [
     "<all_urls>"
     // "activeTab"
-  ],
-
-  “web_accessible_resources”: [
-    “pics/*”
-  ],
+  ]
 
 }
