--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "babel-loader": "^5.0.0",
     "body-parser": "^1.9.3",
     "css-loader": "^0.18.0",
-    "express": "^4.7.2",
     "extract-text-webpack-plugin": "^0.8.0",
     "file-loader": "^0.8.1",
     "html-loader": "^0.3.0",
@@ -21,16 +20,12 @@
     "node-sass": "^3.3.2",
     "null-loader": "^0.1.0",
     "react": "^0.13.1",
-    "react-hot-loader": "^1.2.9",
-    "react-proxy-loader": "^0.3.1",
-    "reactfire": "^0.5.0",
     "sass-loader": "^2.0.1",
     "stats-webpack-plugin": "^0.1.2",
     "style-loader": "^0.12.0",
     "url-loader": "^0.5.5",
     "uuid": "^2.0.1",
-    "webpack": "^1.8.5",
-    "webpack-dev-server": "^1.4.7"
+    "webpack": "^1.8.5"
   },
   "devDependencies": {},
   "eslintConfig": {
