--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,7 @@
   "content_scripts" : [{
     "matches" : ["*://www.youtube.com/*"],
     "css": ["style.css"],
-    "js" : ["lib/jquery.js", "lib/firebase.js", "lib/lodash.js", "inject.js"]
+    "js" : ["lib/jquery.js", "lib/firebase.js", "lib/lodash.js", "inject.js"],
+    "run_at":"document_end"
   }]
 }
