--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,7 @@
       "persistent":false
     },
 "content_security_policy": "script-src 'self' https://cdn.firebase.com https://*.firebaseio.com; object-src 'self'",
+"web_accessible_resources": ["assets/emojis/*","pics/*.png"],
 
   // "content_scripts":[{
   //     "matches":["*"],
